kubernetes/manifests/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: ecommerce
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      serviceAccountName: external-secrets-sa   # 👈 IRSA enabled SA
      containers:
        - name: backend
          image: 317105901372.dkr.ecr.us-east-1.amazonaws.com/ecommerce-backend:latest
          ports:
            - containerPort: 3000
